Updated content spacing

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,30 +1,45 @@
 h1,h2,h3,h4,h5,h6{
   color: $color-font-darkest;
   font-family: $font-stack-headings;
+
+  + h1, + h2, + h3, + h4, + h5, + h6{
+    margin-top: $spacing-s;
+  }
+
+  + p{
+    margin-top: $spacing-xs;
+  }
 }
 
 h1{
-  font-size: 2.8em;
+  font-size: 2em;
 }
 
 h2{
-  font-size: 2.2em;
-}
-
-h3{
   font-size: 1.8em;
 }
 
+h3{
+  font-size: 1.6em;
+}
+
 h4{
-  font-size: 1.4em;
+  font-size: 1.2em;
 }
 
 h5{
-  font-size: 1.2em;
+  font-size: 1em;
 }
 
 h6{
   font-size: 1em;
+}
+
+p{
+  line-height: 1.6em;
+  + h1, + h2, + h3, + h4, + h5, + h6{
+    margin-top: $spacing-m;
+  }
 }
 
 p + p{
