--- a/css/styles.scss
+++ b/css/styles.scss
@@ -5,6 +5,7 @@
 @import 'reset';
 @import 'body';
 @import 'typography';
+@import 'images';
 @import 'post';
 @import 'post-item';
 @import 'site-wrapper';
