Further improved spacing

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -37,7 +37,7 @@ h6{
 
 p{
   line-height: 1.6em;
-  + h1, + h2, + h3, + h4, + h5, + h6{
+  + h1, + h2, + h3, + h4, + h5, + h6, + img{
     margin-top: $spacing-m;
   }
 }
