--- a/_sass/_images.scss
+++ b/_sass/_images.scss
@@ -1,8 +1,8 @@
 img{
   height: auto;
   max-width: 100%;
-  
-  + h1, + h2, + h3, + h4, + h5, + h6{
+
+  + h1, + h2, + h3, + h4, + h5, + h6, + p{
     margin-top: $spacing-s;
   }
 }
